--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,11 @@
 {
   "routes": [
     {
+      "route": "/src/img/*",
+      "serve": "/src/img/*",
+      "statusCode": 200
+    },
+    {
       "route": "/img/*",
       "serve": "/src/img/*",
       "statusCode": 200
@@ -13,7 +18,7 @@
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+    "exclude": ["/src/img/*", "/img/*", "/images/*", "/css/*", "/js/*", "/assets/*"]
   },
   "mimeTypes": {
     ".jpg": "image/jpeg",
@@ -22,5 +27,11 @@
     ".gif": "image/gif",
     ".svg": "image/svg+xml",
     ".webp": "image/webp"
+  },
+  "platform": {
+    "apiRuntime": "node:18"
+  },
+  "globalHeaders": {
+    "content-security-policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:;"
   }
 }
